found a double route on server, swagger documentation for plantRoutes
